realistic whites and values added and fixed layout problems the occurred when removing borders

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ html, body {
 
 
   .week-number-header {
-      margin-top: 3.5em;
+      margin-top: 3em;
     }
 
   .fte {
@@ -138,7 +138,7 @@ html, body {
       position: absolute;
       background: slategrey;
       width: 80%;
-      max-height: 4.8em;
+      max-height: 3.1em;
       text-align: center;
       margin-left: 20%;
       margin-top: 10%;
@@ -148,9 +148,12 @@ html, body {
   .fte-cell {
     max-width: 1.5em; 
     min-width:1.5em; 
+    padding: 2px 1px 2px 0px;
+   /*
     border-top: 2px solid black; 
     border-bottom: 2px solid black; 
-    border-right: 1px solid black; 
+    border-right: 1px solid black;
+   */
     font-weight: bold; 
     margin-left: 0;
     text-align: center;
@@ -165,6 +168,8 @@ html, body {
       max-width: 1.5em;
       text-align: center;
       background: cadetblue;
+      vertical-align: middle;
+      height: 2em;
   }
 
 .proj-name-cell {
